infrastructure/apps/gitea/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gitea-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gitea
  template:
    metadata:
      labels:
        app: gitea
    spec:
      containers:
        - name: gitea
          image: docker.gitea.com/gitea:1.23.8-rootless
          ports:
            - containerPort: 3000
              name: web
            - containerPort: 2222
              name: ssh
          resources:
            requests:
              cpu: "250m"
              memory: "512Mi"
            limits:
              cpu: "1"
              memory: "1Gi"
          volumeMounts:
            - name: gitea-storage
              subPath: data
              mountPath: /data
            - name: gitea-storage
              subPath: config
              mountPath: /etc/gitea
      volumes:
        - name: gitea-storage
          persistentVolumeClaim:
            claimName: gitea-data-pvc
        - name: gitea-config-map
          configMap:
            name: gitea-config
