infrastructure/apps/gitea/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gitea-service
spec:
  selector:
    app: gitea
  ports:
    - name: web
      protocol: TCP
      port: 3000
      targetPort: 3000
    - name: ssh
      protocol: TCP
      port: 22
      targetPort: 2222
